WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
6185
CSS1: character styled with :first-letter is not selectable
https://bugs.webkit.org/show_bug.cgi?id=6185
Summary
CSS1: character styled with :first-letter is not selectable
Joost de Valk (AlthA)
Reported
2005-12-21 13:17:12 PST
When a first letter is styled through the :first-letter, it is not selectable.
Attachments
Testcase
(578 bytes, text/html)
2005-12-21 13:17 PST
,
Joost de Valk (AlthA)
no flags
Details
Demonstrate more details
(2.01 KB, text/html)
2012-06-13 20:11 PDT
,
Joshua Lock (joshuagl)
no flags
Details
Patch
(61.73 KB, patch)
2026-04-05 15:24 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(64.35 KB, patch)
2026-04-05 19:48 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(66.26 KB, patch)
2026-04-10 12:26 PDT
,
alan
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Joost de Valk (AlthA)
Comment 1
2005-12-21 13:17:39 PST
Created
attachment 5209
[details]
Testcase
Eric Seidel (no email)
Comment 2
2005-12-21 15:47:33 PST
This is a known issue that selections can not include generated text, which I assume the first letter is in this instance. The reason being that selections in WebCore are represented by DOMRange objects, and thus can not include anonymous render tree content. It's possible there is already a dup in bugzilla, there are also dups in Radar.
Julian Bennett Holmes
Comment 3
2007-02-12 18:32:35 PST
I'm pretty sure anything styled with first:letter isn't generated content:
http://www.w3.org/TR/css3-content/
Generated content is stuff like "content: footnote;" and even list numbers: "li { display: list-item; list-style: decimal; }" But stuff that is written into the HTML and then styled with CSS isn't generated content.
mitz
Comment 4
2008-01-15 08:36:12 PST
***
Bug 16875
has been marked as a duplicate of this bug. ***
Mark Rowe (bdash)
Comment 5
2008-01-15 08:41:22 PST
<
rdar://problem/5688237
>
Joshua Lock (joshuagl)
Comment 6
2012-06-13 20:11:04 PDT
Created
attachment 147471
[details]
Demonstrate more details I have begun trying to understand this issue some and have discovered several additional details: * If the selection begins with a :first-letter styled element the styled letter is not highlighted as selected (but is copied to the clipboard, more below). * However any following :first-letter styled elements are highlighted as selected. * If the selection does not begin with a :first-letter styled element all selected contents are highlighted. * The clipboard, once the selection is copied, includes the entire selection (rather than simply what is highlighted). * But the length of the selection, when testing the extentOffset property of the selection object, does not match what I'd expect. The attachment demonstrates each of the points above (except demonstrating pasting the copied selection).
Joshua Lock (joshuagl)
Comment 7
2012-06-13 20:12:38 PDT
I intend to start looking into fixing this bug next week so any pointers to relevant parts of WebCore for someone new to WebKit would be appreciated.
GregR
Comment 8
2014-02-13 10:18:25 PST
***
Bug 128705
has been marked as a duplicate of this bug. ***
GregR
Comment 9
2014-02-13 10:20:58 PST
Demo of issue:
http://jsfiddle.net/P3TLx/6/
pavlos
Comment 10
2015-10-19 03:03:34 PDT
any work happening about all the contenteditable/first-letter issues?
alan
Comment 11
2026-04-05 15:21:38 PDT
***
Bug 311437
has been marked as a duplicate of this bug. ***
alan
Comment 12
2026-04-05 15:24:59 PDT
Created
attachment 478931
[details]
Patch
alan
Comment 13
2026-04-05 19:48:01 PDT
Created
attachment 478932
[details]
Patch
alan
Comment 14
2026-04-06 13:30:54 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/62142
alan
Comment 15
2026-04-10 12:26:51 PDT
Created
attachment 478997
[details]
Patch
EWS
Comment 16
2026-04-15 07:16:10 PDT
Committed
311287@main
(1f01e406b70e): <
https://commits.webkit.org/311287@main
> Reviewed commits have been landed. Closing PR #62142 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug